<resources>
    <string name="app_name">CTU News</string>
    <string name="TITLE_HOME">Thông báo mới nhất</string>
    <string name="TITLE_SUPPORT_STUDENT">Tin tức - Sự kiện</string>
    <string name="TITLE_JOB_INFO">Thông tin việc làm</string>
    <string name="CTU_NAME">Can Tho University</string>
    <string name="CTU_URL">https://www.ctu.edu.vn</string>
    <string name="NOTIFY_URL">https://www.ctu.edu.vn/thong-bao.html?start=</string>
    <string name="NEWS_URL">https://www.ctu.edu.vn/tin-tuc.html?start=</string>
    <string name="DRIVE_READ_PDF_URL">https://drive.google.com/viewer?url=</string>
    <string name="JOB_CTU_URL">https://vieclam.ctu.edu.vn</string>
    <string name="HTML_NOTIFY">/thong-bao/</string>
    <string name="NEXT_LABLE">Sau</string>
    <string name="PREVIOUS_LABLE">Trước</string>
    <string name="LOADING">Đang tải, vui lòng đợi!</string>
    <string name="ERRORS">Lỗi</string>
    <string name="SUCCESS">Thành công</string>
    <string name="INTERNET_ERROR">Không có kết nối internet!</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="OK">OK</string>

    <!--Title job infomation-->
    <string name="SCIENCE">Khoa học - Kỹ thuật</string>
    <string name="TECHNOLOGY">Công nghệ thông tin</string>
    <string name="ECONOMY">Kinh tế - Luật</string>
    <string name="AGRICULTURE">Môi trường - Nông nghiệp</string>
    <string name="SOCIETY">Sư phạm - Xã hội</string>
    <string name="SEAFOOD">Thủy sản</string>
    <!--URL job infomation-->
    <string name="SCIENCE_URL">https://vieclam.ctu.edu.vn/index.php/cong-nghe-ky-thuat</string>
    <string name="TECHNOLOGY_URL">https://vieclam.ctu.edu.vn/index.php/cong-nghe-thong-tin</string>
    <string name="ECONOMY_URL">https://vieclam.ctu.edu.vn/index.php/kinh-te-luat</string>
    <string name="AGRICULTURE_URL">https://vieclam.ctu.edu.vn/index.php/moi</string>
    <string name="SOCIETY_URL">https://vieclam.ctu.edu.vn/index.php/su-pham-xa-hoi</string>
    <string name="SEAFOOD_URL">https://vieclam.ctu.edu.vn/index.php/thuy-san</string>

    <!--Intent key-->
    <string name="NEWS_MODEL">NEWS_MODEL</string>
</resources>
